--- a/tabel.html
+++ b/tabel.html
@@ -1,209 +1,248 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Jesika Yusnita Laoly</title>
-    <style>
-      .header-library {
-    position: relative;
-    background-image: url('https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746550161/f9f1d13d-a4f6-4ce5-beba-dc65309ee791_xlmqgd.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 350px;
-    color: white;
-    overflow: hidden;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    animation: fadeIn 1.5s ease-in-out;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Perpustakaan Jesika Yusnita Laoly</title>
+  <style>
+    /* RESET & DASAR */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-.header-library .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.4); /* overlay gelap agar teks terbaca */
-    z-index: 0;
-}
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f8fb;
+      color: #333;
+      line-height: 1.6;
+    }
 
-.header-content {
-    position: relative;
-    z-index: 1;
-    padding: 20px;
-    text-align: center;
-}
+    /* HEADER */
+    .header-library {
+      position: relative;
+      background-image: url('https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746549151/Cara_Reservasi_Perpustakaan_Cikini_beserta_Daftar_Keanggotaannya_pcylgm.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 350px;
+      color: white;
+      overflow: hidden;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: fadeIn 1.5s ease-in-out;
+    }
 
-.header-content img {
-    height: 60px;
-    margin-bottom: 10px;
-}
+    .header-library .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      height: 100%; width: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 0;
+    }
 
-.header-content h1 {
-    font-size: 28px;
-    margin: 10px 0;
-    color: white;
-}
+    .header-content {
+      position: relative;
+      z-index: 1;
+      padding: 20px;
+      text-align: center;
+    }
 
-.header-content nav ul {
-    padding: 0;
-    list-style: none;
-}
+    .header-content img {
+      height: 60px;
+      margin-bottom: 10px;
+    }
 
-.header-content nav ul li {
-    display: inline-block;
-    margin: 0 10px;
-}
+    .header-content h1 {
+      font-size: 28px;
+      margin: 10px 0;
+      color: white;
+    }
 
-.header-content nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s ease-in-out;
-}
+    .header-content nav ul {
+      padding: 0;
+      list-style: none;
+    }
 
-.header-content nav ul li a:hover {
-    color: #FFD700;
-}
-             /* RESET DAN DASAR */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    .header-content nav ul li {
+      display: inline-block;
+      margin: 0 10px;
+    }
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f8fb;
-            color: #333;
-            line-height: 1.6;
-        }
+    .header-content nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease-in-out;
+    }
 
-        
-        /* TABEL PERKALIAN */
-        .table-container {
-            overflow-x: auto;
-            margin: 20px auto;
-            max-width: 95%;
-        }
+    .header-content nav ul li a:hover {
+      color: #FFD700;
+    }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
+    /* KONTROL TABEL */
+    .kontrol-tabel {
+      text-align: center;
+      margin: 30px auto 10px;
+    }
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-        }
+    .kontrol-tabel select,
+    .kontrol-tabel button {
+      padding: 7px 12px;
+      margin: 5px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
 
-        th {
-            background-color: #00BFFF;
-            color: white;
-        }
+    .kontrol-tabel button {
+      background-color: #00BFFF;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
 
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
+    .kontrol-tabel button:hover {
+      background-color: #0099cc;
+    }
 
-        /* FOOTER */
-        footer {
-            background-color: #00BFFF;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 30px;
-            animation: fadeIn 1s ease-in;
-        }
+    /* TABEL PERKALIAN */
+    .table-container {
+      overflow-x: auto;
+      margin: 20px auto;
+      max-width: 95%;
+    }
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
 
-        /* RESPONSIF */
-        @media (max-width: 600px) {
-            table {
-                font-size: 14px;
-            }
-        }
-    </style>
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #00BFFF;
+      color: white;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    /* FOOTER */
+    footer {
+      background-color: #00BFFF;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+      animation: fadeIn 1s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @media (max-width: 600px) {
+      table {
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
 <body>
 
 <header class="header-library">
-    <div class="overlay"></div>
-    <div class="header-content">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
-        <h1>Perpustakaan Jesika Yusnita Laoly</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="tabel.html">Tabel</a></li>
-                <li><a href="http://localhost/tabel.php">PHP</a></li>
-            </ul>
-        </nav>
-    </div>
+  <div class="overlay"></div>
+  <div class="header-content">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website" />
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="tabel.html">Tabel</a></li>
+        <li><a href="http://localhost/tabel.php">PHP</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
-    
-<h2>Tabel Perkalian 10 x 10</h2>
+
+<section class="kontrol-tabel">
+  <h2>Tabel Perkalian</h2>
+  <label for="ukuranTabel">Pilih ukuran: </label>
+  <select id="ukuranTabel" onchange="buatTabel()">
+    <option value="5">5 x 5</option>
+    <option value="10" selected>10 x 10</option>
+    <option value="12">12 x 12</option>
+    <option value="15">15 x 15</option>
+  </select>
+  <button onclick="window.print()">Cetak Tabel</button>
+</section>
 
 <div class="table-container">
-    <table id="perkalian">
-        <thead>
-            <tr>
-                <th>*</th>
-                <!-- Kolom Header 1-10 akan ditambahkan dengan JS -->
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Baris tabel akan diisi oleh JavaScript -->
-        </tbody>
-    </table>
+  <table id="perkalian">
+    <thead>
+      <tr><th>*</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
 
 <footer>
-    &copy; 2025 Perpustakaan Jesika Yusnita Laoly. All rights reserved.
+  &copy; 2025 Perpustakaan Jesika Yusnita Laoly. All rights reserved.
 </footer>
 
 <script>
+  function buatTabel() {
+    const ukuran = parseInt(document.getElementById('ukuranTabel').value);
     const table = document.getElementById('perkalian');
     const theadRow = table.querySelector('thead tr');
+    const tbody = table.querySelector('tbody');
 
-    // Tambah header kolom 1-10
-    for (let i = 1; i <= 10; i++) {
-        const th = document.createElement('th');
-        th.textContent = i;
-        theadRow.appendChild(th);
+    // Kosongkan header dan body
+    theadRow.innerHTML = '<th>*</th>';
+    tbody.innerHTML = '';
+
+    // Tambah header kolom
+    for (let i = 1; i <= ukuran; i++) {
+      const th = document.createElement('th');
+      th.textContent = i;
+      theadRow.appendChild(th);
     }
 
     // Tambah isi tabel
-    const tbody = table.querySelector('tbody');
-    for (let i = 1; i <= 10; i++) {
-        const row = document.createElement('tr');
-        const th = document.createElement('th');
-        th.textContent = i;
-        row.appendChild(th);
+    for (let i = 1; i <= ukuran; i++) {
+      const row = document.createElement('tr');
+      const th = document.createElement('th');
+      th.textContent = i;
+      row.appendChild(th);
 
-        for (let j = 1; j <= 10; j++) {
-            const td = document.createElement('td');
-            td.textContent = i * j;
-            row.appendChild(td);
-        }
+      for (let j = 1; j <= ukuran; j++) {
+        const td = document.createElement('td');
+        td.textContent = i * j;
+        row.appendChild(td);
+      }
 
-        tbody.appendChild(row);
+      tbody.appendChild(row);
     }
+  }
+
+  window.onload = buatTabel;
 </script>
 
 </body>
 </html>
+
